Changed Left Pannel Display of Collections to an Accordion format
- Added Accordion from shadcn
- Removed CollectionCard for collection entry display
- Created CollectionAccordion for collection entry display
- Fixed scrolling caused mismatch between right and left panel issue by turning off browser scrolling for one screen app.

--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,13 @@
     --highlight: 222.2 84% 14.9%;
     --highlight-foreground: 210 40% 88%;
   }
+
+  .no-scroll {
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+  }
 }
 
 @layer base {
